dataset1235/2025-2/2947369575/users/3299079478/executions/1003782500_704983377.log
== RUN (2025-08-25 23:36:46)
-- CODE: 
X = int(input("2"))
Y = int(input("5"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:38:11)
-- CODE: 
X = int(input("entre com o valor de x:"))
Y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:36:30)
-- CODE: 
X = int(input("2"))
Y = int(input("5"))

Q1 = X \\ Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:39:16)
-- CODE: 
X = int(input("entre com o valor de x:"))
Y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:36:12)
-- CODE: 
X = int(input("2"))
Y = int(input("5"))

Q1 = X \\ Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:38:19)
-- CODE: 
X = int(input("entre com o valor de x:"))
Y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:36:14)
-- CODE: 
X = int(input("2"))
Y = int(input("5"))

Q1 = X \\ Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:38:20)
-- CODE: 
X = int(input("entre com o valor de x:"))
Y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:39:29)
-- CODE: 
X = int(input("entre com o valor de x:"))
Y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:39:00)
-- CODE: 
X = int(input("entre com o valor de x:"))
Y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:42:23)
-- CODE: 
X = int(input("Entre com o valor de x:"))
Y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:39:51)
-- CODE: 
X = int(input("Entre com o valor de x:"))
Y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:38:03)
-- CODE: 
X = int(input("entre com o valor de x:"))
Y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:36:48)
-- CODE: 
X = int(input("2"))
Y = int(input("5"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:36:31)
-- CODE: 
X = int(input("2"))
Y = int(input("5"))

Q1 = X \\ Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:38:20)
-- CODE: 
X = int(input("entre com o valor de x:"))
Y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:39:16)
-- CODE: 
X = int(input("entre com o valor de x:"))
Y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:36:11)
-- CODE: 
X = int(input("2"))
Y = int(input("5"))

Q1 = X \\ Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:36:13)
-- CODE: 
X = int(input("2"))
Y = int(input("5"))

Q1 = X \\ Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:40:01)
-- CODE: 
X = int(input("Entre com o valor de x:"))
Y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:39:19)
-- CODE: 
X = int(input("entre com o valor de x:"))
Y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:39:52)
-- CODE: 
X = int(input("Entre com o valor de x:"))
Y = int(input("Entre com o valor de y:"))

Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** X

print(Q1)
print(R)
print(Q2)
print(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
16384
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
390625
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
9765625
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
9007199254740992
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
143343663499379469475676305956380433799785311823017570233599302461682679755530300504376159569382855409664
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
286687326998758938951352611912760867599570623646035140467198604923365359511060601008752319138765710819328
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:35:41)
-- CODE: 
X = int(input("2"))
Y = int(input("5"))

Q1 = X \\ Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3

print(Q1)
PRINT(R)
PRINT(Q2)
PRINT(Pr)
print(Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 4
    Q1 = X \\ Y
            ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
